Remove chat debugging code and fix detail pane invisible

--- a/web/src/main/webapp/css/redDawn.less
+++ b/web/src/main/webapp/css/redDawn.less
@@ -103,6 +103,8 @@ html, body {
 
 .detail-pane { 
   .right-pane;
+  visibility: visible;
+  right: 0;
 
   @import "detail/detail";
 }
